objects/ASI_CRM_Monthly_AR__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_AR_Date__c</fullName>
        <label>AR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_AR_RMB__c</fullName>
        <label>AR (RMB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Monthly AR</relationshipLabel>
        <relationshipName>ASI_CRM_CN_Monthly_AR</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Monthly AR</label>
    <nameField>
        <displayFormat>AR-{0000000}</displayFormat>
        <label>Monthly AR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly AR</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Monthly_AR</fullName>
        <active>true</active>
        <label>CN Monthly AR</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>